scrollbar for filter, and correction in spelling

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -125,6 +125,12 @@
     border: 1px solid #ced4da;
 }
 
+.scrollbar{
+    height: auto;
+    max-height: 200px;
+    overflow-x: hidden;
+}
+
 @media (max-width: 1150px) {
     #container {
         grid-template-columns: 1fr 1fr;
